assets/css/components/markdown/callouts.css
.callout {
  @apply rounded-md p-4 text-base mb-6;
  @apply print:border-2 print:p-2;

  > p {
    @apply m-0;
  }

  .callout-label {
    @apply inline-flex items-center gap-1 font-bold font-sans;
    text-transform: uppercase;

    > svg {
      @apply w-[1.2rem] h-[1.5rem];
    }
  }

  &.note, &.info {
    @apply bg-blue-200 print:bg-transparent print:border-blue-200 dark:bg-blue-950;

    .callout-label {
      @apply text-blue-600 dark:text-blue-500;
    }

    > .body {
      @apply text-black dark:text-white;
    }
  }

  &.tip, &.todo {
    @apply bg-teal-100 print:bg-transparent print:border-teal-900 dark:bg-teal-900;

    .callout-label {
      @apply text-teal-600 dark:text-teal-300;
    }
  }

  &.success {
    @apply bg-green-100 print:bg-transparent print:border-green-900 dark:bg-green-900;

    .callout-label {
      @apply text-green-600 dark:text-green-400;
    }
  }

  &.question {
    @apply bg-amber-200/10 print:bg-transparent print:border-amber-500;

    .callout-label {
      @apply text-amber-500 dark:text-amber-200;
    }
  }

  &.warning {
    @apply bg-orange-500/10 print:bg-transparent print:border-orange-500;

    .callout-label {
      @apply text-orange-600;
    }
  }

  &.danger {
    @apply bg-red-500/25 print:bg-transparent print:border-red-500;

    .callout-label {
      @apply text-red-500;
    }
  }

  &.example {
    @apply bg-violet-900/25 print:bg-transparent print:border-violet-900;

    .callout-label {
      @apply text-violet-600 dark:text-violet-400;
    }
  }
} /* .callout */

